Add cars for sessions
