# src/main/kotlin/com/ryzingtitan/datalogapi/data/cars/entities/CarEntity.kt
@@ -1,0 +1,13 @@
+package com.ryzingtitan.datalogapi.data.cars.entities
+
+import org.springframework.data.annotation.Id
+import org.springframework.data.relational.core.mapping.Table
+
+@Table("cars")
+data class CarEntity(
+    @Id
+    val id: Int? = null,
+    val yearManufactured: Int,
+    val make: String,
+    val model: String,
+)
