# src/main/kotlin/com/ryzingtitan/datalogapi/domain/cars/dtos/Car.kt
@@ -1,0 +1,8 @@
+package com.ryzingtitan.datalogapi.domain.cars.dtos
+
+data class Car(
+    val id: Int?,
+    val year: Int,
+    val make: String,
+    val model: String,
+)
